text labels for edges (ex: RDF properties)

--- a/src/GraphTest2.html
+++ b/src/GraphTest2.html
@@ -140,7 +140,7 @@
                     subjectNode = graph.newNode({label: subject});
                     nodes[subject] = subjectNode;
                 }
-                var objectNode;
+                var objectNode = nodes[object];
                 if (objectNode == undefined) {
                     objectNode = graph.newNode({label: object});
                     nodes[object] = objectNode;
