--- a/src/ProceduralGraph-2D.html
+++ b/src/ProceduralGraph-2D.html
@@ -1,41 +1,29 @@
+<html>
+<head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script src="rdfquery/jquery.rdfquery.core.min-1.0.js"></script>
 
-<html> 
-<body> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
-<script src="springy.js"></script> 
-<script src="springyui.js"></script> 
-<script> 
+    <script src="x3dom/x3dom.js"></script>   <!-- necessary for 3D -->
+    <script src="springy/springy.js"></script>
+    <script src="springy/springyui.js"></script>
+
+    <script src="atomize.js"></script>
+    <script src="demo.data.js"></script>
+</head>
+
+<body>
  
-var graph = new Graph();
+<div id="content"></div>
+
+<script>
  
-var dennis = graph.newNode({label: 'Dennis'});
-var michael = graph.newNode({label: 'Michael'});
-var jessica = graph.newNode({label: 'Jessica'});
-var timothy = graph.newNode({label: 'Timothy'});
-var barbara = graph.newNode({label: 'Barbara'});
-var franklin = graph.newNode({label: 'Franklin'});
-var monty = graph.newNode({label: 'Monty'});
-var james = graph.newNode({label: 'James'});
-var bianca = graph.newNode({label: 'Bianca'});
  
-graph.newEdge(dennis, michael, {color: '#00A0B0'});
-graph.newEdge(michael, dennis, {color: '#6A4A3C'});
-graph.newEdge(michael, jessica, {color: '#CC333F'});
-graph.newEdge(jessica, barbara, {color: '#EB6841'});
-graph.newEdge(michael, timothy, {color: '#EDC951'});
-graph.newEdge(franklin, monty, {color: '#7DBE3C'});
-graph.newEdge(dennis, monty, {color: '#000000'});
-graph.newEdge(monty, james, {color: '#00A0B0'});
-graph.newEdge(barbara, timothy, {color: '#6A4A3C'});
-graph.newEdge(dennis, bianca, {color: '#CC333F'});
-graph.newEdge(bianca, monty, {color: '#EB6841'});
- 
-jQuery(document).ready(function(){
-    jQuery('#springydemo').springy({ 'graph': graph });
+$(function(){
+    new2DSpace('content', nameGraph, '640px', '480px');
 });
  
-</script> 
- 
-<canvas id="springydemo" width="640" height="480" /> 
-</body> 
+</script>
+
+
+</body>
 </html> 
